tests/errors/error_missing_semi.wyn
fn main() {
    var x = 42  // Missing semicolon here
    var y = 3.14;
    
    print("Hello")  // Missing semicolon here
    print("World");
    
    if (x > 0) {
        print("positive")  // Missing semicolon here
    }
    
    // Multiple statements on same line
    var a = 1 var b = 2;  // Missing semicolon between statements
}